--- a/poor.css
+++ b/poor.css
@@ -7,10 +7,11 @@
 }
 
 .u-section-1 .u-image-1 {
-  height: 616px;
+  height: 685px;
   margin-top: 109px;
   margin-bottom: 0;
   filter: brightness(0.6);
+  width: 1140px;
 }
 
 .u-section-1 .u-text-1 {
@@ -49,9 +50,64 @@
   margin: 20px auto 60px;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 835px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 565px;
+    width: 940px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -283px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 703px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 433px;
+    width: 720px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -151px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 595px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 325px;
+    width: 540px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -43px;
+  }
+}
+
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 475px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 205px;
+    width: 340px;
+  }
+
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
+    margin-top: 77px;
   }
 }
 
