--- a/shy.css
+++ b/shy.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/animegirl.gif");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -10,12 +11,12 @@
   font-family: StretchProBasicDemo;
   background-image: none;
   font-size: 4.6875rem;
-  margin: 286px auto 0;
+  margin: 281px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-family: GothamBold;
-  margin: -10px auto 0;
+  margin: 11px auto 0;
 }
 
 .u-section-1 .u-social-icons-1 {
@@ -23,7 +24,7 @@
   min-height: 16px;
   width: 246px;
   min-width: 94px;
-  margin: 16px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-icon-1 {
@@ -45,12 +46,6 @@
 .u-section-1 .u-custom-html-1 {
   margin-bottom: 60px;
   margin-top: 22px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-social-icons-1 {
-    margin-top: 0;
-  }
 }
 
 @media (max-width: 991px) {
