--- a/users.css
+++ b/users.css
@@ -7,7 +7,7 @@
 }
 
 .u-section-1 .u-image-1 {
-  height: 616px;
+  height: 685px;
   margin-top: 109px;
   margin-bottom: 0;
   filter: brightness(0.6);
@@ -17,7 +17,7 @@
   font-family: StretchProBasicDemo;
   font-size: 4.375rem;
   font-weight: normal;
-  margin: -492px auto 0;
+  margin: -561px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -175,6 +175,15 @@
   padding: 0;
 }
 
+.u-section-1 .u-btn-10 {
+  transition-duration: 0.5s;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  font-family: GothamBold;
+  font-size: 1.25rem;
+  margin: 0 auto 60px;
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
     --animation-custom_in-translate_x: 0px;
@@ -329,6 +338,23 @@
 }
 
 .u-section-1 .u-btn-9.u-btn-9.u-btn-9.hover {
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
+}
+
+.u-section-1 .u-btn-10,
+.u-section-1 .u-btn-10:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
+}
+
+.u-section-1 .u-btn-10.u-btn-10.u-btn-10:hover {
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
+}
+
+.u-section-1 .u-btn-10.u-btn-10.u-btn-10:hover:before {
+  background-color: transparent !important;
+}
+
+.u-section-1 .u-btn-10.u-btn-10.u-btn-10.hover {
   box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
 }@font-face {
   font-family: 'StretchProBasicDemo';
