--- a/users.css
+++ b/users.css
@@ -8,34 +8,23 @@
 
 .u-section-1 .u-image-1 {
   height: 685px;
-  margin-top: 109px;
-  margin-bottom: 0;
   filter: brightness(0.6);
+  margin-top: 114px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-1 {
   font-family: StretchProBasicDemo;
   font-size: 4.375rem;
   font-weight: normal;
-  margin: -561px auto 0;
+  margin: -581px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-family: GothamBold;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  font-size: 1.25rem;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-btn-1 {
-  transition-duration: 0.5s;
-  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
-  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  padding: 0;
+  font-family: StretchProBasicDemo;
+  font-size: 1.5rem;
+  font-weight: normal;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-text-3 {
@@ -46,12 +35,13 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: 0 auto;
+  margin: 5px auto 0;
 }
 
-.u-section-1 .u-btn-2 {
-  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+.u-section-1 .u-btn-1 {
   transition-duration: 0.5s;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   padding: 0;
 }
 
@@ -63,10 +53,12 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: -5px auto 0;
+  width: 37px;
+  margin: 256px auto 0;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-2 {
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   transition-duration: 0.5s;
   padding: 0;
 }
@@ -79,12 +71,11 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: -5px auto 0;
+  margin: -245px auto 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-3 {
   transition-duration: 0.5s;
-  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   padding: 0;
 }
 
@@ -96,7 +87,24 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: 0 auto;
+  margin: 208px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
+  transition-duration: 0.5s;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  padding: 0;
+}
+
+.u-section-1 .u-text-7 {
+  font-family: GothamBold;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-size: 1.25rem;
+  margin: -178px auto 0;
 }
 
 .u-section-1 .u-btn-5 {
@@ -105,7 +113,7 @@
   padding: 0;
 }
 
-.u-section-1 .u-text-7 {
+.u-section-1 .u-text-8 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -115,28 +123,11 @@
   font-size: 1.25rem;
   transition-duration: 0.5s;
   text-shadow: 2px 0 0 rgba(0,0,0,0);
-  margin: 0 auto;
+  margin: -9px auto 0;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-text-8 {
-  font-family: GothamBold;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  font-size: 1.25rem;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-btn-7 {
-  transition-duration: 0.5s;
-  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   padding: 0;
 }
 
@@ -148,13 +139,12 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  transition-duration: 0.5s;
-  text-shadow: 2px 0 0 rgba(0,0,0,0);
-  margin: 0 auto;
+  margin: 20px auto 0;
 }
 
-.u-section-1 .u-btn-8 {
-  background-image: none;
+.u-section-1 .u-btn-7 {
+  transition-duration: 0.5s;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   padding: 0;
 }
 
@@ -166,7 +156,26 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: 0 auto;
+  transition-duration: 0.5s;
+  text-shadow: 2px 0 0 rgba(0,0,0,0);
+  margin: -181px auto 0;
+}
+
+.u-section-1 .u-btn-8 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-1 .u-text-11 {
+  font-family: GothamBold;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-size: 1.25rem;
+  margin: 94px auto 0;
 }
 
 .u-section-1 .u-btn-9 {
@@ -180,8 +189,27 @@
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
   font-family: GothamBold;
   font-size: 1.25rem;
-  margin: 0 auto 60px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 15px auto 0;
   padding: 0;
+}
+
+.u-section-1 .u-text-12 {
+  font-family: StretchProBasicDemo;
+  font-size: 1.5rem;
+  font-weight: normal;
+  margin: -257px auto 0;
+}
+
+.u-section-1 .u-text-13 {
+  font-family: StretchProBasicDemo;
+  font-size: 1.5rem;
+  font-weight: normal;
+  margin: 68px auto 60px;
 }
 
 @media (max-width: 1199px) {
@@ -281,16 +309,16 @@
   box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
 }
 
-.u-section-1 .u-text-7,
-.u-section-1 .u-text-7:before {
+.u-section-1 .u-text-8,
+.u-section-1 .u-text-8:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
 }
 
-.u-section-1 .u-text-7.u-text-7.u-text-7:hover {
+.u-section-1 .u-text-8.u-text-8.u-text-8:hover {
   text-shadow: 2px 2px 8px rgba(128,128,128,1) !important;
 }
 
-.u-section-1 .u-text-7.u-text-7.u-text-7.hover {
+.u-section-1 .u-text-8.u-text-8.u-text-8.hover {
   text-shadow: 2px 2px 8px rgba(128,128,128,1) !important;
 }
 
@@ -311,16 +339,16 @@
   box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
 }
 
-.u-section-1 .u-text-9,
-.u-section-1 .u-text-9:before {
+.u-section-1 .u-text-10,
+.u-section-1 .u-text-10:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
 }
 
-.u-section-1 .u-text-9.u-text-9.u-text-9:hover {
+.u-section-1 .u-text-10.u-text-10.u-text-10:hover {
   text-shadow: 2px 2px 8px rgba(128,128,128,1) !important;
 }
 
-.u-section-1 .u-text-9.u-text-9.u-text-9.hover {
+.u-section-1 .u-text-10.u-text-10.u-text-10.hover {
   text-shadow: 2px 2px 8px rgba(128,128,128,1) !important;
 }
 
